--- a/root/static/search.html
+++ b/root/static/search.html
@@ -109,7 +109,7 @@
   </body>
   <script type="text/javascript">
    
-    var jsonUrl = "http://localhost:3000/gobbletest/{word}/json";
+    var jsonUrl = "http://datafactory.co.uk/gobbletest/{word}/json";
     
     $.ajaxSetup ({  
         cache: false  
